fixed issue with dropdown hiding behind cards

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   color: white;
   position: sticky;
+  z-index: 3;
 }
 
 .navbar-lewagon .navbar-collapse {
